--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-dom": "^19.0.0",
     "wrangler": "^3.95.0"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
