--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "engines": {
     "node": ">=19"
   },
+  "packageManager": "npm@10.8.1",
   "devDependencies": {
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
