--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,6 @@ name = "recommendation-demo"
 compatibility_date = "2024-12-16"
 compatibility_flags = [ "nodejs_compat" ]
 pages_build_output_dir = ".vercel/output/static"
+
+[env]
+NODE_VERSION = "19"
