--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "wrangler": "^3.95.0"
   },
   "engines": {
-    "node": "^18.18.0"
+    "node": ">=19"
   },
   "packageManager": "npm@10.8.1",
   "devDependencies": {
